package app.common.widgets.menu.parts;

/**
 * To execute.
 * It's used to make the option function work.
 */
public interface ToExecute {
    void execute();
}
