package app.games.TikTakToe;

/**
 * TikTakToeView
 */
public class TikTakToeView {
    /**
     * Prints the game board
     * 
     * A 3x3 grid
     */
    public void printBoard(char[] board) {
        System.out.println("|---|---|---|");
        System.out.println("| " + board[0] + " | " + board[1] + " | " + board[2] + " |");
        System.out.println("|-----------|");
        System.out.println("| " + board[3] + " | " + board[4] + " | " + board[5] + " |");
        System.out.println("|-----------|");
        System.out.println("| " + board[6] + " | " + board[7] + " | " + board[8] + " |");
        System.out.println("|---|---|---|");
    }
}