package app.games.common;

/**
 * GameSession
 * 
 * The GameSession is a singleton (explenation v)
 * https://refactoring.guru/design-patterns/singleton
 * 
 * Its a singleton to make creating and managing a session
 * accross multiple menus easyer
 */
public class GameSession {
    
}
