package app.menus.common;

/**
 * Menu
 * 
 * This interface has all functions that a menu must implement
 * 
 * It also allows the storing of any menu as Menu
 */
public interface MenuState {

    public abstract void open();

}
